force-app/main/default/objects/NCSCTransaction__c/NCSCTransaction__c.object-meta.xml
<CustomObject>
    <description>NCSC - Transactions related to a line item issue.</description>
    <label>Transaction</label>
    <nameField>
        <displayFormat>T-{0}</displayFormat>
        <label>Transaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>