force-app/main/default/objects/NCSCTransaction__c/fields/Action_Td_Cd_2__c.field-meta.xml
<CustomField>
    <fullName>Action_Td_Cd_2__c</fullName>
    <description>Target Table: zla
Target Column:    zla_action_TD_code2__c</description>
    <label>Action Td Cd 2</label>
    <length>1</length>
    <type>Text</type>
</CustomField>