force-app/main/default/objects/NCSCTransaction__c/fields/Action_Td_Code1__c.field-meta.xml
<CustomField>
    <fullName>Action_Td_Code1__c</fullName>
    <description>Target Table:zla
Target Column:    zla_action_TD_code1__c</description>
    <label>Action Td Code1</label>
    <length>1</length>
    <type>Text</type>
</CustomField>