force-app/main/default/objects/NCSCTransaction__c/fields/Actual_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Ship_Date__c</fullName>
    <description>Target Table:zla
Target Column:zla_date_shipped</description>
    <label>Actual Ship Date</label>
    <type>DateTime</type>
</CustomField>