force-app/main/default/objects/NCSCTransaction__c/fields/Adjusted_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Quantity__c</fullName>
    <description>Target Table:fin_305/a15/zla/zau/zsa
Target Column:fin_305_qty/a15_qty/    zla_adj_qty/zau_qty/zsa_adj_qty</description>
    <label>Adjusted Quantity</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>