force-app/main/default/objects/NCSCTransaction__c/fields/Adjusted_Value__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Value__c</fullName>
    <description>Target Table: zau
Target Column: zau_extend_value</description>
    <label>Adjusted Value</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>