force-app/main/default/objects/NCSCTransaction__c/fields/Advice_Code__c.field-meta.xml
<CustomField>
    <fullName>Advice_Code__c</fullName>
    <description>Target Table: fin_305/a15/zla/zsa
Target Column: fin_305_advice_code/a15_advice_cde/    zla_advice_cde/zsa_adv_cde</description>
    <label>Advice Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>