force-app/main/default/objects/NCSCTransaction__c/fields/Agency_Bureau_Code__c.field-meta.xml
<CustomField>
    <fullName>Agency_Bureau_Code__c</fullName>
    <description>Target Table: fin_305/zla
Target Column: fin_305_agy_bur_cde/    zla_agency_bureau_cd</description>
    <label>Agency Bureau Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>