force-app/main/default/objects/NCSCTransaction__c/fields/BOAC__c.field-meta.xml
<CustomField>
    <fullName>BOAC__c</fullName>
    <description>Target  Table: fin_305/zla
Target Column: fin_305_boac/    zla_boac</description>
    <label>BOAC</label>
    <length>6</length>
    <type>Text</type>
</CustomField>