force-app/main/default/objects/NCSCTransaction__c/fields/Card_No_2__c.field-meta.xml
<CustomField>
    <fullName>Card_No_2__c</fullName>
    <description>Target Table: zla
Target Column:</description>
    <label>Card No 2</label>
    <length>1</length>
    <type>Text</type>
</CustomField>