force-app/main/default/objects/NCSCTransaction__c/fields/Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Card_Number__c</fullName>
    <description>Target Table: zla
Target Column:     zla_card_no_1</description>
    <label>Card Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>