force-app/main/default/objects/NCSCTransaction__c/fields/Chargeback_Ind__c.field-meta.xml
<CustomField>
    <fullName>Chargeback_Ind__c</fullName>
    <description>Target Table: zla / zsa
Target Column:     zla_chargeback_ind / zsa_chg_ind</description>
    <label>Chargeback Ind</label>
    <length>1</length>
    <type>Text</type>
</CustomField>