force-app/main/default/objects/NCSCTransaction__c/fields/City_Code__c.field-meta.xml
<CustomField>
    <fullName>City_Code__c</fullName>
    <description>Target Table: fin_305/zla
Target Column: fin_305_city_cde/    zla_city_cd</description>
    <label>City Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>