force-app/main/default/objects/NCSCTransaction__c/fields/Cost_Price__c.field-meta.xml
<CustomField>
    <fullName>Cost_Price__c</fullName>
    <description>Target Table:fin_305/zla/zsa
Target Column:fin_305_cost_price/    zla_cost_price/zsa_cost_price</description>
    <label>Cost Price</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>