force-app/main/default/objects/NCSCTransaction__c/fields/Current_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Date__c</fullName>
    <description>Target Table: zla / zsa / zkp
Target Column:     zla_date_avail / zsa_dte_avail /zkp_tim</description>
    <label>Current Date</label>
    <type>DateTime</type>
</CustomField>