force-app/main/default/objects/NCSCTransaction__c/fields/Cycle_Date__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Date__c</fullName>
    <description>Target Table:fin_305
Target Column:fin_305_cycle_dte</description>
    <label>Cycle Date</label>
    <length>3</length>
    <type>Text</type>
</CustomField>