force-app/main/default/objects/NCSCTransaction__c/fields/delivery_date__c.field-meta.xml
<CustomField>
    <fullName>delivery_date__c</fullName>
    <description>Target Table: a15
Target Column: a15_rdd</description>
    <label>delivery date</label>
    <length>3</length>
    <type>Text</type>
</CustomField>