force-app/main/default/objects/NCSCTransaction__c/fields/DIC__c.field-meta.xml
<CustomField>
    <fullName>DIC__c</fullName>
    <description>Target Table: a15
Target Column:a15_doc_id_ext</description>
    <label>DIC</label>
    <length>1</length>
    <type>Text</type>
</CustomField>