force-app/main/default/objects/NCSCTransaction__c/fields/Discrepancy_region__c.field-meta.xml
<CustomField>
    <fullName>Discrepancy_region__c</fullName>
    <description>Target Table: zau/zla
Target Column:zau_discrep_reg/    zla_discrepancy_region/zsa_dis_rgn</description>
    <label>Discrepancy region</label>
    <length>1</length>
    <type>Text</type>
</CustomField>