force-app/main/default/objects/NCSCTransaction__c/fields/DiscrepancyOrder__c.field-meta.xml
<CustomField>
    <fullName>DiscrepancyOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Discrepancy Order</label>
    <referenceTo>NCSCOrder__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>