force-app/main/default/objects/NCSCTransaction__c/fields/Distribution_code__c.field-meta.xml
<CustomField>
    <fullName>Distribution_code__c</fullName>
    <description>Target Table:fin_305/a15/zla
Target Column:fin_305_dist/a15_dist/    zla_dist_cde</description>
    <label>Distribution code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>