force-app/main/default/objects/NCSCTransaction__c/fields/Doc_Id__c.field-meta.xml
<CustomField>
    <fullName>Doc_Id__c</fullName>
    <description>Target Table:fin_305/a15/zla/zau
Target Column:fin_305_doc_id/a15_doc_id/    zla_doc_id/zau_doc_id</description>
    <label>Doc Id</label>
    <length>3</length>
    <type>Text</type>
</CustomField>