force-app/main/default/objects/NCSCTransaction__c/fields/Excep_Bill_to_Ind__c.field-meta.xml
<CustomField>
    <fullName>Excep_Bill_to_Ind__c</fullName>
    <description>Target Table: zla
Target Column:     zla_excep_bill_to_ind</description>
    <label>Excep Bill to Ind</label>
    <length>1</length>
    <type>Text</type>
</CustomField>