force-app/main/default/objects/NCSCTransaction__c/fields/Export_Domestic_code__c.field-meta.xml
<CustomField>
    <fullName>Export_Domestic_code__c</fullName>
    <description>Target Table: fin_305/zla
Target Column: fin_305_exp_dom_ind/    zla_export_domestic_cd</description>
    <label>Export Domestic code</label>
    <length>1</length>
    <type>Text</type>
</CustomField>