force-app/main/default/objects/NCSCTransaction__c/fields/Ext_Sell_Val__c.field-meta.xml
<CustomField>
    <fullName>Ext_Sell_Val__c</fullName>
    <description>Target Table:fin_305
Target Column:fin_305_ext_sell_val</description>
    <label>Ext Sell Val</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>