force-app/main/default/objects/NCSCTransaction__c/fields/File_Id__c.field-meta.xml
<CustomField>
    <fullName>File_Id__c</fullName>
    <description>Target Table:fin_305
Target Column:fin_305_file_id</description>
    <label>File Id</label>
    <length>8</length>
    <type>Text</type>
</CustomField>