force-app/main/default/objects/NCSCTransaction__c/fields/First_character_of_PO_number__c.field-meta.xml
<CustomField>
    <fullName>First_character_of_PO_number__c</fullName>
    <description>Target Table:fin_305
Target Column:fin_305_com_ctr_cd</description>
    <label>First character of PO number</label>
    <length>1</length>
    <type>Text</type>
</CustomField>