force-app/main/default/objects/NCSCTransaction__c/fields/Fund_Code__c.field-meta.xml
<CustomField>
    <fullName>Fund_Code__c</fullName>
    <description>Target Table:fin_305/a15/zla/zau
Target Column:fin_305_fund/a15_fund/    zla_fund_cde/zau_fund_cde</description>
    <label>Fund Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>