force-app/main/default/objects/NCSCTransaction__c/fields/Hdr__c.field-meta.xml
<CustomField>
    <fullName>Hdr__c</fullName>
    <description>Target Table:  zkp / zsa
Target Column: zkp_hdr / zsa_hdr</description>
    <label>Hdr</label>
    <length>5</length>
    <type>Text</type>
</CustomField>