force-app/main/default/objects/NCSCTransaction__c/fields/Imq__c.field-meta.xml
<CustomField>
    <fullName>Imq__c</fullName>
    <description>Target Table: zla
Target Column:     zla_imq</description>
    <label>Imq</label>
    <length>1</length>
    <type>Text</type>
</CustomField>