force-app/main/default/objects/NCSCTransaction__c/fields/Inquiry_Code__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_Code__c</fullName>
    <description>Target Table: zau/zla/a15
Target Column: zau_inq_cde/    zla_inquiry_cde/zsa_inq_cde /a15_routing_cde_inq</description>
    <label>Inquiry Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>