force-app/main/default/objects/NCSCTransaction__c/fields/Item_Mgr__c.field-meta.xml
<CustomField>
    <fullName>Item_Mgr__c</fullName>
    <description>Target Table: zla
Target Column:     zla_item_mgr</description>
    <label>Item Mgr</label>
    <length>2</length>
    <type>Text</type>
</CustomField>