force-app/main/default/objects/NCSCTransaction__c/fields/Media_Status__c.field-meta.xml
<CustomField>
    <fullName>Media_Status__c</fullName>
    <description>Target Table: a15
Target Column: a15_m_s</description>
    <label>Media Status</label>
    <length>1</length>
    <type>Text</type>
</CustomField>