force-app/main/default/objects/NCSCTransaction__c/fields/Mode_of_Ship__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_Ship__c</fullName>
    <description>Target Table:fin_305
Target Column:fin_305_mode_of_ship</description>
    <label>Mode of Ship</label>
    <length>1</length>
    <type>Text</type>
</CustomField>