force-app/main/default/objects/NCSCTransaction__c/fields/MRA_Liability_Code__c.field-meta.xml
<CustomField>
    <fullName>MRA_Liability_Code__c</fullName>
    <description>Target Table: zau
Target Column: zau_liability</description>
    <label>MRA Liability Code</label>
    <length>1</length>
    <type>Text</type>
</CustomField>