force-app/main/default/objects/NCSCTransaction__c/fields/No_of_Cards__c.field-meta.xml
<CustomField>
    <fullName>No_of_Cards__c</fullName>
    <description>Target Table:zla
Target Column:     zla_no_of_cards</description>
    <label>No of Cards</label>
    <length>2</length>
    <type>Text</type>
</CustomField>