force-app/main/default/objects/NCSCTransaction__c/fields/NSN__c.field-meta.xml
<CustomField>
    <fullName>NSN__c</fullName>
    <description>Target Table:fin_305/a15/zla/zau/zsa
Target Column:fin_305_nsn/a15_nsn/    zla_nsn/zau_nsn/zsa_nsn</description>
    <label>NSN</label>
    <length>15</length>
    <type>Text</type>
</CustomField>