force-app/main/default/objects/NCSCTransaction__c/fields/Original_document_identifier_code__c.field-meta.xml
<CustomField>
    <fullName>Original_document_identifier_code__c</fullName>
    <description>Target Table: zla
Target Column:     zla_card_no_2</description>
    <label>Original document identifier code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>