force-app/main/default/objects/NCSCTransaction__c/fields/Pending_Flag__c.field-meta.xml
<CustomField>
    <fullName>Pending_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Target Table:fin_305/zkp/a15/zla/zau/zsa
Target column: fin_305_pnd_flg/zkp_pnd_flg/a15_pnd_flg/    zla_pnd_flg/zau_pnd_flg/zsa_pnd_flg</description>
    <label>Pending  Flag</label>
    <type>Checkbox</type>
</CustomField>