force-app/main/default/objects/NCSCTransaction__c/fields/PO_Number__c.field-meta.xml
<CustomField>
    <fullName>PO_Number__c</fullName>
    <description>Target Table: fin_305/zla/ vendor_offset
Target Column: fin_305_manif_po_nbr/    zla_gbl_po_nr/    vendor_offset_po_nbr</description>
    <label>PO Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>