force-app/main/default/objects/NCSCTransaction__c/fields/Priority_code__c.field-meta.xml
<CustomField>
    <fullName>Priority_code__c</fullName>
    <description>Target Table:fin_305/a15/zla
Target Column:fin_305_pri/a15_pri/    zla_priority_cde</description>
    <label>Priority code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>