force-app/main/default/objects/NCSCTransaction__c/fields/Problem_Type__c.field-meta.xml
<CustomField>
    <fullName>Problem_Type__c</fullName>
    <description>Target Table: vendor_offset
Target Column:     vendor_offset_prb_typ__c</description>
    <label>Problem Type</label>
    <type>TextArea</type>
</CustomField>