force-app/main/default/objects/NCSCTransaction__c/fields/Project_code__c.field-meta.xml
<CustomField>
    <fullName>Project_code__c</fullName>
    <description>Target Table:fin_305/a15/zla
Target Column:fin_305_proj/a15_proj/    zla_project_cde</description>
    <label>Project code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>