force-app/main/default/objects/NCSCTransaction__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>Target Table:fin_305
Target Column:fin_305_record_id</description>
    <label>Record Id</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>