force-app/main/default/objects/NCSCTransaction__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Target Table: fin_305
Target Column: fin_305_region</description>
    <label>Region</label>
    <length>1</length>
    <type>Text</type>
</CustomField>