force-app/main/default/objects/NCSCTransaction__c/fields/Report_Type__c.field-meta.xml
<CustomField>
    <fullName>Report_Type__c</fullName>
    <description>Target Table: zkp
Target Column: zkp_rpt_typ</description>
    <label>Report Type</label>
    <length>1</length>
    <type>Text</type>
</CustomField>