force-app/main/default/objects/NCSCTransaction__c/fields/Requisition_Number__c.field-meta.xml
<CustomField>
    <fullName>Requisition_Number__c</fullName>
    <description>Target Table:fin_305/zkp/a15/zla/zau/zsa
Target Column: fin_305_req/zkp_req/a15_req/    zla_req/zau_req/zsa_req</description>
    <label>Requisition Number</label>
    <length>14</length>
    <type>Text</type>
</CustomField>