force-app/main/default/objects/NCSCTransaction__c/fields/Requisition_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Requisition_Suffix__c</fullName>
    <description>Target Table:fin_305/zkp/zla/zau/zsa
Target Column:fin_305_sfx/zkp_sfx/    zla_sfx/zau_sfx/zsa_sfx</description>
    <label>Requisition  Suffix</label>
    <length>1</length>
    <type>Text</type>
</CustomField>