force-app/main/default/objects/NCSCTransaction__c/fields/rod_key__c.field-meta.xml
<CustomField>
    <fullName>rod_key__c</fullName>
    <description>Target Table:fin_305/zkp/a15/zla/zau/ vendor_offset/zsa
Target Column:</description>
    <label>rod key</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>