force-app/main/default/objects/NCSCTransaction__c/fields/Routing_Code__c.field-meta.xml
<CustomField>
    <fullName>Routing_Code__c</fullName>
    <description>Target Table: a15
Target Column: a15_routing_cde</description>
    <label>Routing Code</label>
    <length>1</length>
    <type>Text</type>
</CustomField>