force-app/main/default/objects/NCSCTransaction__c/fields/Routing_Code_Reg__c.field-meta.xml
<CustomField>
    <fullName>Routing_Code_Reg__c</fullName>
    <description>Target Table: a15
Target Column: a15_routing_cde_reg</description>
    <label>Routing Code Reg</label>
    <length>1</length>
    <type>Text</type>
</CustomField>