force-app/main/default/objects/NCSCTransaction__c/fields/Routing_Identifier_Code__c.field-meta.xml
<CustomField>
    <fullName>Routing_Identifier_Code__c</fullName>
    <description>Target Table: a15/zau/zla
Target Column: a15_ric_to/zau_ric_to/    zla_ric</description>
    <label>Routing Identifier Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>