force-app/main/default/objects/NCSCTransaction__c/fields/Rtg_Id__c.field-meta.xml
<CustomField>
    <fullName>Rtg_Id__c</fullName>
    <description>Target Table:fin_305
Target Column:fin_305_rtg_id</description>
    <label>Rtg Id</label>
    <length>3</length>
    <type>Text</type>
</CustomField>