force-app/main/default/objects/NCSCTransaction__c/fields/Sell_Price__c.field-meta.xml
<CustomField>
    <fullName>Sell_Price__c</fullName>
    <description>Target Table:fin_305/zla/zsa
Target Column:fin_305_sell_price/    zla_sell_price/zsa_sell_price</description>
    <label>Sell Price</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>