force-app/main/default/objects/NCSCTransaction__c/fields/SIG_code__c.field-meta.xml
<CustomField>
    <fullName>SIG_code__c</fullName>
    <description>Target Table:fin_305/a15/zla/zau
Target Column:fin_305_signal/a15_signal/    zla_signal/zau_signal</description>
    <label>SIG code</label>
    <length>1</length>
    <type>Text</type>
</CustomField>