force-app/main/default/objects/NCSCTransaction__c/fields/State_Code__c.field-meta.xml
<CustomField>
    <fullName>State_Code__c</fullName>
    <description>Target Table: fin_305/zla
Target Column: fin_305_state_cde/    zla_st_cd</description>
    <label>State Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>