force-app/main/default/objects/NCSCTransaction__c/fields/supplement_address_AAC__c.field-meta.xml
<CustomField>
    <fullName>supplement_address_AAC__c</fullName>
    <description>Target Table:fin_305/a15/zla/zau
Target Column:fin_305_sup_add/a15_sup_add/    zla_sup_add/zau_sup_add</description>
    <label>supplement address AAC</label>
    <length>6</length>
    <type>Text</type>
</CustomField>