force-app/main/default/objects/NCSCTransaction__c/fields/Td_Code__c.field-meta.xml
<CustomField>
    <fullName>Td_Code__c</fullName>
    <description>Target Table: fin_305/a15/zla
Target Column: fin_305_t_d_cde/ a15_td/  zla_original_td_cde / zsa_acn_cde</description>
    <label>Td Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>