force-app/main/default/objects/NCSCTransaction__c/fields/Td_Ser_8_Ind__c.field-meta.xml
<CustomField>
    <fullName>Td_Ser_8_Ind__c</fullName>
    <description>Target Table:fin_305
Target Column:fin_305_td_ser_8_ind</description>
    <label>Td Ser 8 Ind</label>
    <length>1</length>
    <type>Text</type>
</CustomField>