force-app/main/default/objects/NCSCTransaction__c/fields/Tech_Code__c.field-meta.xml
<CustomField>
    <fullName>Tech_Code__c</fullName>
    <description>Target Table: zkp
Target Column: zkp_tch</description>
    <label>Tech Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>