force-app/main/default/objects/NCSCTransaction__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>NCSC - Type of transaction</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Debit</fullName>
            </value>
            <value>
                <fullName>Vendor Offset</fullName>
            </value>
            <value>
                <fullName>Vendor Offset Reversal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>