force-app/main/default/objects/NCSCTransaction__c/fields/Unit_code__c.field-meta.xml
<CustomField>
    <fullName>Unit_code__c</fullName>
    <description>Target Table:fin_305/a15/zla/zau/zsa
Target Column:fin_305_unt/a15_unt/    zla_unt/zau_unt/zsa_unt</description>
    <label>Unit code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>