force-app/main/default/objects/NCSCTransaction__c/fields/Vendoe_control_Number__c.field-meta.xml
<CustomField>
    <fullName>Vendoe_control_Number__c</fullName>
    <description>Target Table: vendor_offset
 Target Column:     vendor_offset_cont_nbr__c</description>
    <label>Vendoe control Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>