force-app/main/default/objects/NCSCTransaction__c/fields/Vendor_Offset_Amount__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Offset_Amount__c</fullName>
    <description>Target Table: vendor_offset
Target Column:     vendor_offset_amount__c</description>
    <label>Vendor Offset Amount</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>